--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -15,14 +15,14 @@
                 <input type="email" id="email" name="email" required>
                 <i class="fa-solid fa-exclamation"></i>
                 <i class="fa-solid fa-check"></i>
-                <small>Mensagem de erro</small>
+                <small class="hidden">Mensagem de erro</small>
             </div>
             <div class="form-control">
                 <label for="senha">Digite sua senha:</label>
                 <input type="password" id="senha" name="senha" required>
                 <i class="fa-solid fa-exclamation"></i>
                 <i class="fa-solid fa-check"></i>
-                <small>Mensagem de erro</small>
+                <small class="hidden" >Mensagem de erro</small>
             </div>
             <button type="submit">Continuar</button>
         </form>
