--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h2>Exercícios</h2>
         <ul>
             <li>
-                <img src="c:\Users\ryzen\Downloads\Exercícios para Abdômen.jpg" alt="Exercícios para Abdômen">
+                <img src="abs_0.jpg" alt="Exercícios para Abdômen">
                 <h3>Exercícios para Abdômen</h3>
                 <p>Descrição: Este exercício fortalece os músculos abdominais, ajudando a tonificar o abdômen.</p>
                 <p>Instruções: Deite-se de costas, dobre os joelhos e mantenha os pés apoiados no chão. Coloque as mãos atrás da cabeça ou cruzadas sobre o peito. Lentamente, levante o tronco em direção aos joelhos, contraindo os músculos abdominais. Volte à posição inicial e repita.</p>
@@ -41,79 +41,3 @@
         <p>Esses são alguns exemplos de exercícios de musculação.</p>
     </main>
 </body>
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas Fit</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Receitas Fit</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Receitas</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="destaque">
-            <h2>Receita em Destaque</h2>
-            <article>
-                <h3>Salada de Quinoa</h3>
-                <img src="c:\Users\ryzen\Downloads\salada.jpg" alt="Imagem da Salada de Quinoa">
-                <p>Uma deliciosa salada de quinoa, perfeita para uma refeição leve e saudável.</p>
-                <p>Ingredientes:</p>
-                <ul>
-                    <li>1 xícara de quinoa cozida</li>
-                    <li>Tomate cereja cortado ao meio</li>
-                    <li>Pepino em rodelas</li>
-                    <li>Abacate em cubos</li>
-                    <li>Alface picada</li>
-                    <li>Cebola roxa em fatias finas</li>
-                    <li>Molho de sua preferência</li>
-                    <li>Sal e pimenta a gosto</li>
-                </ul>
-                <p>Modo de Preparo:</p>
-                <ol>
-                    <li>Em uma tigela grande, misture a quinoa cozida, o tomate cereja, o pepino, o abacate, a alface e a cebola roxa.</li>
-                    <li>Tempere com o molho de sua preferência, sal e pimenta a gosto.</li>
-                    <li>Misture tudo delicadamente e sirva.</li>
-                </ol>
-            </article>
-        </section>
-        <section id="outras-receitas">
-            <h2>Outras Receitas</h2>
-            <article>
-                <h3>Wrap de Frango com Vegetais</h3>
-                <img src="c:\Users\ryzen\Downloads\8402c5c5f29ca29d758ca7657d3c4ac29a587edf.webp" alt="Imagem do Wrap de Frango com Vegetais">
-                <p>Um delicioso wrap de frango com vegetais, uma opção prática e saudável para qualquer refeição.</p>
-                <p>Ingredientes:</p>
-                <ul>
-                    <li>1 peito de frango cozido e desfiado</li>
-                    <li>Tortilhas de trigo integral</li>
-                    <li>Alface picada</li>
-                    <li>Tomate picado</li>
-                    <li>Cenoura ralada</li>
-                    <li>Pimentão cortado em tiras</li>
-                    <li>Maionese light ou molho de sua preferência</li>
-                    <li>Sal e pimenta a gosto</li>
-                </ul>
-                <p>Modo de Preparo:</p>
-                <ol>
-                    <li>Aqueça as tortilhas em uma frigideira por alguns segundos de cada lado.</li>
-                    <li>Em cada tortilha, espalhe um pouco de maionese ou molho de sua preferência.</li>
-                    <li>Adicione o frango desfiado, a alface, o tomate, a cenoura e o pimentão.</li>
-                    <li>Tempere com sal e pimenta a gosto.</li>
-                    <li>Enrole as tortilhas e sirva.</li>
-                </ol>
-            </article>
-        </section>
-    </main>
-    <footer>
-    </footer>
-</body>
-</html>
