--- a/src/paginaPrincipal2.html
+++ b/src/paginaPrincipal2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="rectangle">Exercícios</div>
-        <div class="rectangle">Receitas Fit</div>
+        <button type="button" class="rectangle"><a href="index.html">Exercícios</a></button>
+        <button type="button" class="rectangle"><a href="nutricao.html">Receita fit</a></button>
         <div class="rectangle">Fórum Clientes</div>
     </div>
 </body>
