--- a/src/nutricao.html
+++ b/src/nutricao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas Fit</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
             <h2>Receita em Destaque</h2>
             <article>
                 <h3>Salada de Quinoa</h3>
-                <img src="c:\Users\ryzen\Downloads\salada.jpg" alt="Imagem da Salada de Quinoa">
+                <img src="salada.jpg" alt="Imagem da Salada de Quinoa">
                 <p>Uma deliciosa salada de quinoa, perfeita para uma refeição leve e saudável.</p>
                 <p>Ingredientes:</p>
                 <ul>
@@ -46,7 +46,7 @@
             <h2>Outras Receitas</h2>
             <article>
                 <h3>Wrap de Frango com Vegetais</h3>
-                <img src="c:\Users\ryzen\Downloads\8402c5c5f29ca29d758ca7657d3c4ac29a587edf.webp" alt="Imagem do Wrap de Frango com Vegetais">
+                <img src="wrap.webp" alt="Imagem do Wrap de Frango com Vegetais">
                 <p>Um delicioso wrap de frango com vegetais, uma opção prática e saudável para qualquer refeição.</p>
                 <p>Ingredientes:</p>
                 <ul>
